# auby

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
auby2/: CMakeLists.txt  bindings.py  hooks.py
auby2/include/: auby.hh
auby2/include/auby/: auby.hh  internal.hh  magic.hh  settings.hh
auby2/include/cocos2dx/: CCDirector.h  v3.h
auby2/include/cocos2dx/base_nodes/: CCNode.h
auby2/include/cocos2dx/cocoa/: CCArray.h  CCGeometry.h  CCObject.h
auby2/include/cocos2dx/include/: ccMacros.h  cocos2d.h
auby2/include/cocos2dx/layers_scenes_transitions_nodes/: CCLayer.h
auby2/include/cocos2dx/particle_nodes/: CCParticleSystem.h  CCParticleSystemQuad.h
auby2/include/cocos2dx/platform/: CCApplicationProtocol.h  CCEGLViewProtocol.h  CCImage.h  CCPlatformConfig.h
auby2/include/cocos2dx/platform/ios/: CCApplication.h
auby2/include/cocos2dx/platform/mac/: CCApplication.h
auby2/include/cocos2dx/platform/win32/: CCPlatformDefine.h
auby2/include/cocos2dx/robtop/keyboard_dispatcher/: CCKeyboardDelegate.h
auby2/include/cocos2dx/robtop/mouse_dispatcher/: CCMouseDelegate.h
auby2/include/cocos2dx/robtop/xml/: DS_Dictionary.h
auby2/include/cocos2dx/sprite_nodes/: CCSpriteFrame.h
auby2/include/cocos2dx/text_input_node/: CCIMEDelegate.h  CCTextFieldTTF.h
auby2/include/cocos2dx/textures/: CCTextureCache.h
auby2/include/cocos2dx/touch_dispatcher/: CCTouchDelegateProtocol.h  CCTouchDispatcher.h
auby2/include/extensions/GUI/CCControlExtension/: CCScale9Sprite.h
auby2/include/fmod/: placeholder.hh
auby2/include/gd/: ButtonSprite.hh  CCMenuItemSpriteExtra.hh  GManager.hh  LoadingLayer.hh  LocalLevelManager.hh  MenuLayer.hh  ext.hh  gd.hh
auby2/src/: auby.mm  cocos.cc  ext.cc  gd.cc  internal.cc  settings.cc
src/: gd_share.cc  icon_hack.cc  main.cc  noclip.cc  settings.hh  verify_hack.cc
src/ui/: ui.cc  ui.hh
